Feat/transactions to test suites frontend (#3044)
* feat(backend): Updating transactions to test suites

* feat(backend): Updating transactions to test suites

* feat(backend): fixing server

* feat(frontend): Transactions to Test Suites

* Revert "feat(frontend): Transactions to Test Suites"

This reverts commit 392e47cc73c893220bc69ff83c391fe7f92f3d23.

* feat(backend): update

* feat(frontend): Transactions to Test Suites

* Fixing test suite id param
